kong/kong-example/http-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ingresses
  annotations:
    konghq.com/strip-path: "true"
    # kubernetes.io/ingress.class: kong
    # prometheus.io/scrape: "true"
spec:
  rules:
  - http:
     paths:
     - path: /billing
       pathType: Prefix
       backend:
         service:
           name: billing
           port:
             number: 80
     - path: /comments
       pathType: Prefix
       backend:
         service:
           name: comments
           port:
             number: 80
     - path: /invoice
       pathType: Prefix
       backend:
         service:
           name: invoice
           port:
             number: 80
